--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
@@ -30,6 +32,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.6",
